Update some content READMEs, upgrade poms, and fix GitHub Actions

--- a/it/docker-compose/docker-compose-env.yaml
+++ b/it/docker-compose/docker-compose-env.yaml
@@ -15,9 +15,9 @@ services:
     networks:
       - test-network
 
-  # Fiware environment setup
+  # FIWARE environment setup
   orion-ld:
-    image: ${ORION_IMAGE:-quay.io/fiware/orion-ld:1.0.1}
+    image: ${ORION_IMAGE:-quay.io/fiware/orion-ld:1.7.0}
     hostname: orion
     # sometimes the initial startup fails due to a weird timescale behaviour
     restart: always
