--- a/it/pom.xml
+++ b/it/pom.xml
@@ -32,7 +32,7 @@
         <version.org.apache.maven.plugins.maven-surefire-plugin>3.0.0-M5</version.org.apache.maven.plugins.maven-surefire-plugin>
 
         <!-- cucumber token, see: https://reports.cucumber.io -->
-        <cucumber.publish-token>bf7355ee-d54c-4c04-b8d6-363866ef3d93</cucumber.publish-token>
+        <cucumber.publish-token>CUCUMBER_PUBLISH_TOKEN</cucumber.publish-token>
     </properties>
 
     <dependencyManagement>
