Update docker-compose command

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -145,7 +145,7 @@ jobs:
         sudo ./iptables.sh
         # workaround to enable strict mode, without changing the base
         sed -i 's/false/true/g' initial-config/listener.yaml
-        docker-compose up -d
+        docker compose up -d
         
     - name: Extract Branch Name
       run: echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
@@ -172,4 +172,4 @@ jobs:
       if: ${{ failure() }}
       run: |
         cd proxy/docker-compose/
-        docker-compose logs
+        docker compose logs
