--- a/it/docker-compose/docker-compose-java.yaml
+++ b/it/docker-compose/docker-compose-java.yaml
@@ -22,3 +22,7 @@ services:
       - test-network
     ports:
       - 4000:4000
+    healthcheck:
+      test: curl --fail -s http://localhost:4000/health || exit 1
+      interval: 30s
+      retries: 15
