--- a/it/pom.xml
+++ b/it/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-            xmlns="http://maven.apache.org/POM/4.0.0" 
-            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.fiware.canismajor</groupId>
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- jackson -->
-        <version.com.fasterxml.jackson.core.jackson-databind>2.17.2</version.com.fasterxml.jackson.core.jackson-databind>
+        <version.com.fasterxml.jackson.core.jackson-databind>2.17.1</version.com.fasterxml.jackson.core.jackson-databind>
 
         <!-- cucumber -->
         <version.io.cucumber>7.0.0</version.io.cucumber>
@@ -32,7 +32,7 @@
         <version.org.apache.maven.plugins.maven-surefire-plugin>3.0.0-M5</version.org.apache.maven.plugins.maven-surefire-plugin>
 
         <!-- cucumber token, see: https://reports.cucumber.io -->
-        <cucumber.publish-token>CUCUMBER_PUBLISH_TOKEN</cucumber.publish-token>
+        <cucumber.publish-token>bf7355ee-d54c-4c04-b8d6-363866ef3d93</cucumber.publish-token>
     </properties>
 
     <dependencyManagement>
@@ -135,7 +135,6 @@
             </testResource>
         </testResources>
         <plugins>
-            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -146,7 +145,6 @@
                     <target>11</target>
                 </configuration>
             </plugin>
-            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -155,13 +153,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
                 <configuration>
                     <!-- Uncomment to enable incremental compilation -->
                     <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
-                    <encoding>UTF-8</encoding>
-                    <source>11</source>
-                    <target>11</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
