--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ MONGO_DB_VERSION=mongo:6.0
 MONGO_DB_PORT=27017
 
 # Canis Major variables
-CANISMAJOR_IMAGE=quay.io/fiware/vault-ethereum:1.5.28
+CANISMAJOR_IMAGE=quay.io/fiware/canis-major:1.5.28
