--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 COMPOSE_PROJECT_NAME=fiware
 EXPOSED_PORT=1026
 
-  # Hashicorp vault as a wallet
+# Hashicorp vault as a wallet
 VAULT_IMAGE=quay.io/fiware/vault-ethereum:1.0.1
 
 # Orion LD variables
@@ -13,3 +13,6 @@ EXPOSED_PORT=1026
 # Mongo DB is used by Orion
 MONGO_DB_VERSION=mongo:6.0
 MONGO_DB_PORT=27017
+
+# Canis Major variables
+CANISMAJOR_IMAGE=quay.io/fiware/canis-major:1.5.28
