--- a/it/docker-compose/docker-compose-env.yaml
+++ b/it/docker-compose/docker-compose-env.yaml
@@ -1,4 +1,3 @@
-version: "3.5"
 services:
 
   # Hashicorp vault as a wallet
@@ -15,7 +14,7 @@ services:
     networks:
       - test-network
 
-  # Fiware environment setup
+  # FIWARE environment setup
   orion-ld:
     image: ${ORION_IMAGE:-quay.io/fiware/orion-ld:1.7.1}
     hostname: orion
@@ -66,6 +65,10 @@ services:
     ports:
       - "8545:8545"
     command: ganache-cli -l 8000000 --gasPrice 0 --account '0x22aabb811efca4e6f4748bd18a46b502fa85549df9fa07da649c0a148d7d5530, 100000000000000000000'
+    healthcheck:
+      test:
+        ganache-cli  --version && echo 0 || echo 1
+      interval: 30s
 
 #volumes:
 #  contract-folder: ~
