--- a/it/docker-compose/docker-compose-java.yaml
+++ b/it/docker-compose/docker-compose-java.yaml
@@ -1,10 +1,9 @@
-version: "3.5"
 services:
   ## CanisMajor setup
   canis-major:
     restart: always
     image: ${CANISMAJOR_IMAGE:-quay.io/fiware/canis-major}
-    hostname: canis-major
+    hostname: canismajor
     depends_on:
       - ganache-cli
     expose:
@@ -22,3 +21,7 @@ services:
       - test-network
     ports:
       - 4000:4000
+    healthcheck:
+      test: curl --fail -s http://canismajor:4000/health || exit 1
+      interval: 30s
+      retries: 15
